[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/player/dog/jump/Jump (3).png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/ALGER.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/coin/blue_coin_hexagon_2.png" type="Texture" id=3]
[ext_resource path="res://src/UIs/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/GUI/Button_61.png" type="Texture" id=5]
[ext_resource path="res://src/UIs/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/GUI/Button_63.png" type="Texture" id=7]
[ext_resource path="res://src/UIs/EndMenu.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
layer = 100
script = ExtResource( 4 )

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = 120.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TopBar"]
margin_right = 141.0
margin_bottom = 100.0
size_flags_vertical = 7

[node name="LiveCount" type="HBoxContainer" parent="TopBar/VBoxContainer"]
margin_right = 141.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="TopBar/VBoxContainer/LiveCount"]
margin_right = 75.0
margin_bottom = 50.0
rect_min_size = Vector2( 75, 50 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="LiveCount" type="Label" parent="TopBar/VBoxContainer/LiveCount"]
margin_left = 79.0
margin_top = 2.0
margin_right = 141.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "x 3"

[node name="CoinCount" type="HBoxContainer" parent="TopBar/VBoxContainer"]
margin_top = 60.0
margin_right = 141.0
margin_bottom = 94.0
size_flags_horizontal = 11
size_flags_vertical = 6
alignment = 2

[node name="TextureRect" type="TextureRect" parent="TopBar/VBoxContainer/CoinCount"]
margin_left = 60.0
margin_right = 90.0
margin_bottom = 34.0
grow_vertical = 2
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="CoinCount" type="Label" parent="TopBar/VBoxContainer/CoinCount"]
margin_left = 94.0
margin_right = 141.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "x 0"

[node name="TimeCount" type="HBoxContainer" parent="TopBar"]
margin_left = 145.0
margin_right = 1826.0
margin_bottom = 100.0
size_flags_horizontal = 3
alignment = 1

[node name="MinCount" type="Label" parent="TopBar/TimeCount"]
margin_left = 752.0
margin_top = 14.0
margin_right = 828.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "00"
align = 2

[node name="BreakPoint" type="Label" parent="TopBar/TimeCount"]
margin_left = 832.0
margin_top = 14.0
margin_right = 849.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = ":"
align = 1

[node name="SecCount" type="Label" parent="TopBar/TimeCount"]
margin_left = 853.0
margin_top = 14.0
margin_right = 929.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "00"

[node name="Setting" type="HBoxContainer" parent="TopBar"]
margin_left = 1830.0
margin_right = 1880.0
margin_bottom = 50.0
size_flags_vertical = 2

[node name="PauseButton" type="TextureButton" parent="TopBar/Setting"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="EndMenu" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="button_up" from="TopBar/Setting/PauseButton" to="." method="_on_PauseButton_button_up"]
